2009-02-22  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed undef warning
	(_get_result_count_elements): added element for ::Category search

2009-01-21  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Completed/Category.pm: new module

2009-01-19  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Category.pm: new backend

2009-01-18  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): mark item as "sold" if ended and bidded (fix for Ebay::Completed)

2008-11-10  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed patterns for detecting spell-checked query

2008-11-09  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_parse_tree): fixed "infinite" looping of page requests

2008-09-06  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (_get_result_count_elements): added pattern for new motors layout
	(_result_count_pattern): match commas in result count!
	(_parse_tree): delete commas from result_count

2008-08-10  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/Stores.pm (_columns): fixed for new page layout?

2008-06-28  Kingpin  <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay.pm (preprocess_results_page): use our own UserAgent to fetch the official eBay time (not a generic LWP::UserAgent)

2008-04-05    <Martin@BLUEMAX>

	* lib/WWW/Search/Ebay/ES.pm (result_count_pattern): fixed

2008-02-25    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (user_agent_delay): new method

2008-02-24    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Motors.pm (result_count_pattern): new methods

	* lib/WWW/Search/Ebay/FR.pm (title_pattern): new method

	* lib/WWW/Search/Ebay.pm (title_pattern): new method
	(result_count_regex): renamed method and made public

2007-12-05    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_result_count_regex): allow one hit to match!

	* lib/WWW/Search/Ebay/IT.pm (_result_count_regex): fixed pattern

2007-12-02    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): ignore auctions from other countries